# pokal

./: .gitmodules  BitmapData.c  CMakeLists.txt  epaper.c  epaper.h  epaper_gui.c  epaper_gui.h  fs.c  fs.h  ina219.c  ina219.h  main.c  repl.c  repl.h  repl_epaper.c  repl_epaper.h  repl_fs.c  repl_fs.h  repl_reset.c  repl_reset.h  repl_ups.c  repl_ups.h  route_fs.c  route_fs.h  route_led.c  route_led.h  route_root.c  route_root.h  tableread.c  tableread.h
httpserver/: httpserver.c  httpserver.h
